insights: fix dashboard and panel menu alignment

--- a/client/web/src/insights/components/insights-view-grid/components/insight-card/components/insight-card-menu/InsightCardMenu.module.scss
+++ b/client/web/src/insights/components/insights-view-grid/components/insight-card/components/insight-card-menu/InsightCardMenu.module.scss
@@ -16,7 +16,7 @@
 
 .item[data-reach-menu-item] {
     padding: 0.25rem 0.75rem;
-    text-align: right;
+    text-align: left;
     width: 100%;
     border-radius: 0;
     transition: unset;
